--- a/seccion 9/authapp/src/index.html
+++ b/seccion 9/authapp/src/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="utf-8">
   <title>Authapp</title>
-  <base href="/">
+  <!--<base href="/">-->
+  <base href="http://www.cmscit.pw/angular_fh/authapp/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
